--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -58,6 +58,9 @@ python_files = "test_*.py"
 python_classes = "Test*"
 python_functions = "test_*"
 asyncio_mode = "auto"
+markers = [
+    "e2e: marks tests as end-to-end tests",
+]
 
 [tool.coverage.run]
 source = ["app"]
