--- a/azure.yaml
+++ b/azure.yaml
@@ -11,3 +11,9 @@ services:
     docker:
       path: ./Dockerfile
       registry: ${AZURE_CONTAINER_REGISTRY_LOGIN_SERVER}
+
+hooks:
+  postprovision:
+    shell: sh
+    run: scripts/add-health-probes.sh
+    continueOnError: false
