security: mitigate image vuls

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,10 +1,13 @@
+# Security: Using Python 3.13 slim with latest security updates
+# TODO: Monitor for updated base images to address CVE-2025-6020 (HIGH)
 FROM python:3.13-slim
 
 WORKDIR /app
 
-# Install system dependencies
+# Install system dependencies and security updates
 RUN apt-get update && apt-get install -y --no-install-recommends \
     gcc \
+    && apt-get upgrade -y \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements first for better caching
