--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -43,7 +43,21 @@ target-version = "py311"
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "N", "UP", "ASYNC", "S", "B", "A", "C4", "T20", "SIM"]
-ignore = ["E501", "S101"]  # E501: line too long, S101: use of assert in tests
+ignore = ["E501", "S101"]                                                       # E501: line too long, S101: use of assert in tests
+
+[tool.ruff.lint.per-file-ignores]
+# Test files can use more relaxed security rules
+"tests/**/*.py" = [
+    "S311",   # random usage OK in tests
+    "S105",   # hardcoded passwords OK in test mocks
+    "S106",   # hardcoded password args OK in test functions
+    "S603",   # subprocess calls OK in test helpers
+    "S607",   # partial paths OK in test helpers
+    "T201",   # print statements OK in load test output
+    "E722",   # bare except OK in test resilience scenarios
+    "S110",   # try-except-pass OK in test scenarios
+    "SIM117", # multiple with statements OK in tests
+]
 
 [tool.mypy]
 python_version = "3.13"
@@ -58,9 +72,7 @@ python_files = "test_*.py"
 python_classes = "Test*"
 python_functions = "test_*"
 asyncio_mode = "auto"
-markers = [
-    "e2e: marks tests as end-to-end tests",
-]
+markers = ["e2e: marks tests as end-to-end tests"]
 
 [tool.coverage.run]
 source = ["app"]
