--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,17 +81,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Setup Azure CLI
-        uses: azure/setup-azcli@v1
-      - name: Show az/bicep versions
-        run: |
-          az version
-          az bicep version || true
-      - name: Install Bicep CLI (fixed)
-        run: |
-          az bicep install
-          # Ensure the latest matching version is used (helps when runner has older az)
-          az bicep upgrade --force || true
-          az bicep version
+      - name: Bicep version (container)
+        run: docker run --rm ghcr.io/azure/bicep:0.37.4 --version
+      - name: Restore Bicep modules
+        run: docker run --rm -v "$PWD":/work -w /work ghcr.io/azure/bicep:0.37.4 restore infra/main.bicep
       - name: Validate Bicep Templates
-        run: az bicep build --file infra/main.bicep
+        run: docker run --rm -v "$PWD":/work -w /work ghcr.io/azure/bicep:0.37.4 build infra/main.bicep
