--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,42 @@ permissions:
   contents: read
 
 jobs:
+  format:
+    name: Ruff Format Check
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.13'
+      - name: Cache uv cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/uv
+          key: ${{ runner.os }}-uv-3.13-${{ hashFiles('src/uv.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-uv-3.13-
+      - name: Cache virtualenv
+        uses: actions/cache@v4
+        with:
+          path: |
+            src/.venv
+          key: ${{ runner.os }}-venv-3.13-${{ hashFiles('src/uv.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-venv-3.13-
+      - name: Install uv
+        run: |
+          python -m pip install --upgrade pip
+          pip install uv
+      - name: Sync deps (dev)
+        working-directory: src
+        run: uv sync --extra dev
+      - name: Ruff format check
+        working-directory: src
+        run: uv run ruff format app/ --check
   lint:
     name: Ruff Lint
     runs-on: ubuntu-latest
@@ -20,6 +56,22 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.13'
+      - name: Cache uv cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/uv
+          key: ${{ runner.os }}-uv-3.13-${{ hashFiles('src/uv.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-uv-3.13-
+      - name: Cache virtualenv
+        uses: actions/cache@v4
+        with:
+          path: |
+            src/.venv
+          key: ${{ runner.os }}-venv-3.13-${{ hashFiles('src/uv.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-venv-3.13-
       - name: Install uv
         run: |
           python -m pip install --upgrade pip
@@ -41,6 +93,22 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.13'
+      - name: Cache uv cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/uv
+          key: ${{ runner.os }}-uv-3.13-${{ hashFiles('src/uv.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-uv-3.13-
+      - name: Cache virtualenv
+        uses: actions/cache@v4
+        with:
+          path: |
+            src/.venv
+          key: ${{ runner.os }}-venv-3.13-${{ hashFiles('src/uv.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-venv-3.13-
       - name: Install uv
         run: |
           python -m pip install --upgrade pip
@@ -51,6 +119,42 @@ jobs:
       - name: Mypy
         working-directory: src
         run: uv run mypy app/
+  tests:
+    name: Pytest
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.13'
+      - name: Cache uv cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/uv
+          key: ${{ runner.os }}-uv-3.13-${{ hashFiles('src/uv.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-uv-3.13-
+      - name: Cache virtualenv
+        uses: actions/cache@v4
+        with:
+          path: |
+            src/.venv
+          key: ${{ runner.os }}-venv-3.13-${{ hashFiles('src/uv.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-venv-3.13-
+      - name: Install uv
+        run: |
+          python -m pip install --upgrade pip
+          pip install uv
+      - name: Sync deps (dev)
+        working-directory: src
+        run: uv sync --extra dev
+      - name: Run unit tests with coverage
+        working-directory: src
+        run: uv run pytest -q --cov=app --cov-report=term-missing
   bicep:
     name: Bicep Build
     runs-on: ubuntu-latest
