--- a/azure.yaml
+++ b/azure.yaml
@@ -8,6 +8,7 @@ services:
     project: ./src
     language: python
     host: containerapp
+    module: modules/app
     docker:
       path: ./Dockerfile
       registry: ${AZURE_CONTAINER_REGISTRY_LOGIN_SERVER}
