--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -120,7 +120,7 @@ jobs:
         working-directory: src
         run: uv run mypy app/
   tests:
-    name: Pytest
+    name: Unit Tests
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -154,7 +154,43 @@ jobs:
         run: uv sync --extra dev
       - name: Run unit tests with coverage
         working-directory: src
-        run: uv run pytest -q --cov=app --cov-report=term-missing
+        run: uv run pytest tests/unit/ -v -m unit --cov=app --cov-report=term-missing
+  integration-tests:
+    name: Integration Tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.13'
+      - name: Cache uv cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/uv
+          key: ${{ runner.os }}-uv-3.13-${{ hashFiles('src/uv.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-uv-3.13-
+      - name: Cache virtualenv
+        uses: actions/cache@v4
+        with:
+          path: |
+            src/.venv
+          key: ${{ runner.os }}-venv-3.13-${{ hashFiles('src/uv.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-venv-3.13-
+      - name: Install uv
+        run: |
+          python -m pip install --upgrade pip
+          pip install uv
+      - name: Sync deps (dev)
+        working-directory: src
+        run: uv sync --extra dev
+      - name: Run integration tests
+        working-directory: src
+        run: uv run pytest tests/integration/ -v -m integration
   bicep:
     name: Bicep Build
     runs-on: ubuntu-latest
